Misc fixes, jukebox songs